ROC-9006 fix sonar code smell issues