@@ -24,7 +24,7 @@ import static uk.gov.hmcts.cmc.claimstore.services.ccd.Role.LEGAL_ADVISOR;
 @ConditionalOnProperty(prefix = "doc_assembly", name = "url")
 public class GenerateOrderCallbackHandler extends CallbackHandler {
     private static final List<Role> ROLES = Collections.singletonList(LEGAL_ADVISOR);
-    private static final List<CaseEvent> EVENTS = ImmutableList.of(GENERATE_ORDER, ACTION_REVIEW_COMMENTS);
+    private static final List<CaseEvent> EVENTS = List.of(GENERATE_ORDER, ACTION_REVIEW_COMMENTS);
 
     private final OrderCreator orderCreator;
     private final OrderPostProcessor orderPostProcessor;
@@ -43,7 +43,7 @@ public class GenerateOrderCallbackHandler extends CallbackHandler {
 
     @Override
     protected Map<CallbackType, Callback> callbacks() {
-        return ImmutableMap.of(
+        return Map.of(
             CallbackType.ABOUT_TO_START, orderCreator::prepopulateOrder,
             CallbackType.MID, orderCreator::generateOrder,
             CallbackType.ABOUT_TO_SUBMIT, orderPostProcessor::persistHearingCourtAndMigrateExpertReport,
